- Version R2: Updated to .NET 6 - Fixed the Actors navbar link targeting Movies

--- a/CS1145_RazorPages/Pages/Shared/_Layout.cshtml
+++ b/CS1145_RazorPages/Pages/Shared/_Layout.cshtml
@@ -28,7 +28,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-page="/Movies/Index">Movies</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Movies/Index">Actors</a>
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Actors/Index">Actors</a>
                         </li>
                     </ul>
                 </div>
